--- a/roles/pi_system_prep/tasks/main.yml
+++ b/roles/pi_system_prep/tasks/main.yml
@@ -1,25 +1,28 @@
 ---
-- name: Disable swap
-  command: dphys-swapfile swapoff
-  ignore_errors: true
+- name: Disable swap (only if dphys-swapfile is present)
+  ansible.builtin.command: dphys-swapfile swapoff
+  register: swapoff_result
+  changed_when: swapoff_result.rc == 0
+  failed_when: swapoff_result.rc != 0
+  when: ansible_facts.packages['dphys-swapfile'] is defined
 
 - name: Remove swapfile entry from fstab
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/fstab
     regexp: '^/var/swap'
     state: absent
 
 - name: Remove dphys-swapfile package (if present)
-  apt:
+  ansible.builtin.apt:
     name: dphys-swapfile
     state: absent
     purge: true
     update_cache: true
 
 - name: Ensure cgroup flags are set in /boot/cmdline.txt
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /boot/firmware/cmdline.txt
-    backrefs: yes
+    backrefs: true
     regexp: '^(.*)$'
     line: '\1 cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1'
     insertafter: EOF
