--- a/inventories/example/group_vars/k3s_cluster.yml
+++ b/inventories/example/group_vars/k3s_cluster.yml
@@ -6,3 +6,13 @@
 
 ansible_user: ansible
 ansible_ssh_private_key_file: ~/.ssh/ansible_id
+
+# Required for xanmanning.k3s role
+k3s_become: true
+k3s_version: v1.29.4+k3s1
+k3s_control_node: "{{ hostvars[inventory_hostname].k3s_control_node | default(false) }}"
+
+k3s_server:
+  disable:
+    - traefik
+    - servicelb
