--- a/playbooks/bootstrap.yml
+++ b/playbooks/bootstrap.yml
@@ -18,7 +18,7 @@
   tasks:
     - name: Update apt cache
       ansible.builtin.apt:
-        update_cache: yes
+        update_cache: true
         cache_valid_time: 3600
 
     - name: Install baseline packages
@@ -58,7 +58,7 @@
 
     - name: Add authorized SSH key for target user
       ansible.builtin.copy:
-        src: "../files/{{ ansible_target_user }}.pub"
+        src: "{{ ansible_pubkey_path }}"
         dest: "/home/{{ ansible_target_user }}/.ssh/authorized_keys"
         owner: "{{ ansible_target_user }}"
         group: "{{ ansible_target_user }}"
