--- a/roles/pi_system_prep/handlers/main.yml
+++ b/roles/pi_system_prep/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Reboot if required
-  reboot:
+  ansible.builtin.reboot:
     msg: "Rebooting to apply cgroup kernel changes"
     connect_timeout: 5
     reboot_timeout: 300
