--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -1,5 +1,5 @@
 ---
-name: Ansible Lint
+name: Ansible
 
 on:
   push:
@@ -33,4 +33,4 @@ jobs:
         run: ansible-galaxy collection install -r requirements.yml
 
       - name: Run ansible-lint
-        run: ansible-lint
+        run: ansible-lint --config .config/ansible-lint.yml
