manually tested site.yml against my cluster and clean run

--- a/playbooks/install_argocd.yml
+++ b/playbooks/install_argocd.yml
@@ -1,4 +1,3 @@
----
 - name: Install Argo CD using local system
   hosts: localhost
   connection: local
@@ -10,9 +9,11 @@
         api_version: v1
         kind: Namespace
         state: present
+      when: not ansible_check_mode
 
     - name: Install Argo CD from upstream manifest
       kubernetes.core.k8s:
         src: https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
         state: present
         namespace: argocd
+      when: not ansible_check_mode
